fixed cart-items-area overflow to scroll

--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -76,6 +76,7 @@
 #cart-items-area {
   padding-top: 1rem;
   height: 53vh;
+  overflow: scroll;
 }
 
 #subtotal-area {
